# minimal_fbgemm

./: CMakeLists.txt  README.md  build.sh
include/fbgemm_gpu/: embedding_backward_template_helpers.cuh  embedding_common.h  split_embeddings_utils.cuh  split_embeddings_utils.h
include/fbgemm_gpu/utils/: binary_search_range.h  cuda_block_count.h  cuda_prelude.cuh  dispatch_macros.h  find_qparams.cuh  fixed_divisor.cuh  float.cuh  half2.h  ops_utils.h  shared_memory.cuh  stochastic_rounding.h  tensor_accessor.h  tensor_utils.h  vec2.h  vec4.cuh  weight_row.h
src/: gen_embedding_backward_rowwise_adagrad_split_unweighted_kernel_cta.hip  gen_embedding_backward_split_common_device_kernel.cuh  gen_embedding_backward_split_indice_weights_codegen.hip  gen_embedding_backward_split_unweighted_device_kernel.cuh  gen_embedding_backward_split_unweighted_device_kernel_hip.cuh  gen_embedding_optimizer_rowwise_adagrad_split_device_kernel.cuh  gen_embedding_optimizer_rowwise_adagrad_split_device_kernel_hip.cuh
tests/: test_kernel.hip  test_kernel_hip.hip
